[tool.poetry]
name = "no-jams"
version = "0.1.0"
description = ""
authors = ["slev-v <stasrudometkin2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
sqlalchemy = {extras = ["postgresql-asyncpg"], version = "^2.0.36"}
alembic = "^1.14.0"
requests = "^2.32.3"
uvicorn = {extras = ["standart"], version = "^0.32.1"}
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
